# confy

./: LICENSE  README.md  confy.1  flake.nix  main.py  net.phluxjr.confy-tui.yml  owl.toml  pyproject.toml
.github/workflows/: build.yml
confy/: main.py
rust rewrite - EXPERIMENTAL, WIP/: Cargo.toml
rust rewrite - EXPERIMENTAL, WIP/src/: main.rs
