[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confy-tui"
version = "2.1.2"
description = "a config manager for linux/unix systems"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/Phluxjr23/confy"
Repository = "https://github.com/Phluxjr23/confy"

[project.scripts]
confy = "confy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["confy"]
